poczatek JS kalendarza

--- a/index.html
+++ b/index.html
@@ -860,13 +860,13 @@
                 <!-- Day Section -->
                 <section class="calendar__days">
                     <div class="calendar__days-selector">
-                        <button type="button" class="calendar__weekday-btn is-active" data-day="mon" aria-pressed="true">Mon</button>
-                        <button type="button" class="calendar__weekday-btn" data-day="tue" aria-pressed="false">Tue</button>
-                        <button type="button" class="calendar__weekday-btn" data-day="wed" aria-pressed="false">Wed</button>
-                        <button type="button" class="calendar__weekday-btn" data-day="thu" aria-pressed="false">Thu</button>
-                        <button type="button" class="calendar__weekday-btn" data-day="fri" aria-pressed="false">Fri</button>
-                        <button type="button" class="calendar__weekday-btn" data-day="sat" aria-pressed="false">Sat</button>
-                        <button type="button" class="calendar__weekday-btn" data-day="sun" aria-pressed="false">Sun</button>
+                        <button type="button" class="calendar__weekday-btn is-active" data-day="mon" data-iso="1" aria-pressed="true">Mon</button>
+                        <button type="button" class="calendar__weekday-btn" data-day="tue" data-iso="2" aria-pressed="false">Tue</button>
+                        <button type="button" class="calendar__weekday-btn" data-day="wed" data-iso="3" aria-pressed="false">Wed</button>
+                        <button type="button" class="calendar__weekday-btn" data-day="thu" data-iso="4" aria-pressed="false">Thu</button>
+                        <button type="button" class="calendar__weekday-btn" data-day="fri" data-iso="5" aria-pressed="false">Fri</button>
+                        <button type="button" class="calendar__weekday-btn" data-day="sat" data-iso="6" aria-pressed="false">Sat</button>
+                        <button type="button" class="calendar__weekday-btn" data-day="sun" data-iso="7" aria-pressed="false">Sun</button>
                     </div>
 
 
