--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
    
            <!-- Modal actions -->
            <div class="task-modal__actions ">
-             <button type="button"
+             <button type="submit"
                      id="submit-task"
                      class="task-modal__btn task-modal__btn--submit task-handler-btn ">
                Add
