--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                  aria-label="Selector modal modes">
 
                 <button id="hand-button"
-                        class="tab-btn hand-btn selector-modal__tab-btn selector-modal__tab-btn--manual"
+                        class="tab-btn hand-btn selector-modal__tab-btn selector-modal__tab-btn--manual pressed"
                         data-mode="manual"
                         role="tab"
                         aria-selected="true"
@@ -436,7 +436,7 @@
                 </button>
 
                 <button id="import-button"
-                        class="tab-btn import-btn selector-modal__tab-btn selector-modal__tab-btn--import"
+                        class="tab-btn import-btn selector-modal__tab-btn selector-modal__tab-btn--import "
                         data-mode="import"
                         role="tab"
                         aria-selected="false"
