--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
             <span class="new-roud-title selector-modal__title-wrap">
                 <h3 id="modal-title"
                     class="selector-modal__title">Create Roadmap</h3>
+                    <div class="task-modal__title-divider"></div>
             </span>
 
             <div class="roud-input-container selector-modal__input-wrap">
@@ -560,6 +561,7 @@
                   <span class="new-import-title selector-modal__title-wrap">
                       <h3 id="import-modal-title"
                           class="selector-modal__title">Import Roadmap!
+                          <div class="task-modal__title-divider"></div>
                      </h3>
                   </span> 
             
