refaktor styli roadmapy

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/register.css">
     <link rel="stylesheet" href="css/forget.css">
-    <link rel="stylesheet" href="css/roudmap.css">
+    
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/main.css">
@@ -632,7 +632,7 @@
              class="list-toggler roadmap-selector__panel">
 
              <h4 id="roadmap-section-title"
-                 class="roud-title roadmap-selector__empty">You don't have any roadmaps!
+                 class="roud-title roadmap-selector__empty">
             </h4>
         
             <div class="roadmap-select-bar roadmap-selector__actions">
